# apps/api/src/app.module.ts
@@ -1,6 +1,7 @@
 import { Module } from '@nestjs/common';
 import { ConfigModule } from '@nestjs/config';
 import { HealthModule } from './health/health.module';
+import { IdentityModule } from './modules/identity/identity.module';
 
 @Module({
   imports: [
@@ -9,6 +10,7 @@ import { HealthModule } from './health/health.module';
       envFilePath: ['.env.local', '.env', '../../.env.local', '../../.env'],
     }),
     HealthModule,
+    IdentityModule,
   ],
 })
 export class AppModule {}
